add an inline style

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>CSS 💫</title>
 </head>
 <body>
-    
+    <h1 style="font-size: 90px;">It is a good day we have been blessed with 🫂</h1>
 </body>
 </html>
