add a style.css file

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CSS 💫</title>
+    <style>
+        h2 {
+            font-size: 25px;
+            color: green;
+        }
+    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 style="font-size: 90px; color: crimson;">It is a good day we have been blessed with 🫂</h1>
+    <h1 style="font-size: 50px; color: crimson;">It is a good day we have been blessed with 🫂</h1>
+    <h2>I am blessed and highly favored 🙇‍♂️</h2>
+    <h3>Everyday is a day to Learn, Earn, and Return 💹</h3>
 </body>
 </html>
