update the web page

--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
     <h1 style="font-size: 50px; color: crimson;">It is a good day we have been blessed with 🫂</h1>
     <h2>I am blessed and highly favored 🙇‍♂️</h2>
     <h3>Everyday is a day to Learn, Earn, and Return 💹</h3>
+
+    <h2 id="title">A Song</h2>
+    <h3>Sang by unknown</h3>
+    <p class="question">Q: They say</p>
+    <p class="answer">A: Now</p>
+    <p class="question">Q: They say</p>
+    <p class="answer">A: Now</p>
+    <p class="question">Q: They say</p>
+    <p class="answer">A: Now</p>
+    <h3>Thank you for reading</h3>
 </body>
 </html>
