--- a/color.html
+++ b/color.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Color 💥</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>God's love is colorful and very bright</h1>
