--- a/color.html
+++ b/color.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>God's love is colorful and very bright</h1>
+    <h1>God's love is colorful and very bright 🌉</h1>
 </body>
 </html>
