add a background image

--- a/color.html
+++ b/color.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>God's love is colorful and very bright 🌉</h1>
+    <h2>I am growing and trusting the Lord all through 🎺</h2>
+
+    <div>
+        
+    </div>
 </body>
 </html>
