update the web page and the readme file

--- a/color.html
+++ b/color.html
@@ -11,7 +11,54 @@
     <h2>I am growing and trusting the Lord all through 🎺</h2>
 
     <div>
-        
+        <p>Keep going Mark</p>
     </div>
+    
+    <h4>I love myself</h4>
+    <h4>Blessings all around me</h4>
+    <h4>Growth is a journey</h4>
+
+    <p>
+        "I am blessed" affirmations focus on cultivating a deep sense of gratitude for the goodness, love, and abundance in one's life, fostering a mindset of positivity and openness to new blessings. Examples include, "I am a magnet for blessings," "Every day brings new blessings into my life," and "My life is a miracle, filled with grace and abundance"
+    </p>
+
+    <p>
+       <h2> I am blessed affirmations </h2>
+Here are affirmations focused on the theme of being blessed, categorized to help you focus on different areas of your life.
+    </p>
+
+    <p>
+       <h3>For a grateful and abundant mindset</h3> 
+I am grateful for all the blessings in my life, both big and small.
+My heart is open to receiving the endless blessings the universe has for me.
+Every day, I am met with new opportunities and new blessings.
+I am a magnet for blessings, joy, and peace.
+My life is a reflection of sacred and abundant blessings.
+    </p>
+
+    <p>
+        For confidence and self-worth
+I am worthy of all the happiness and abundance that comes my way.
+My presence is a blessing to others.
+I am divinely protected, loved, and guided.
+I believe in the blessings within myself.
+I am enough, and I have enough.
+    </p>
+
+    <p>
+        For a positive outlook
+I choose to see the good in every situation and to recognize the blessings.
+Even in challenges, I can find a hidden blessing.
+Good things are always happening for me.
+I trust my journey, even when I can't see the way.
+I wake each day with hope, courage, and a grateful heart.
+    </p>
+
+    For attracting miracles
+Miracles are happening for me right now.
+I am blessed with miracles in many ways.
+The universe orchestrates good things on my behalf.
+I trust that good things are coming to me.
+Every prayer is heard, and every blessing arrives in perfect time.
 </body>
 </html>
