add the linear-gradient style

--- a/color.html
+++ b/color.html
@@ -37,7 +37,7 @@ My life is a reflection of sacred and abundant blessings.
     </p>
 
     <p>
-        For confidence and self-worth
+        <h3>For confidence and self-worth</h3>
 I am worthy of all the happiness and abundance that comes my way.
 My presence is a blessing to others.
 I am divinely protected, loved, and guided.
@@ -46,7 +46,7 @@ I am enough, and I have enough.
     </p>
 
     <p>
-        For a positive outlook
+        <h3>For a positive outlook</h3>
 I choose to see the good in every situation and to recognize the blessings.
 Even in challenges, I can find a hidden blessing.
 Good things are always happening for me.
@@ -54,11 +54,23 @@ I trust my journey, even when I can't see the way.
 I wake each day with hope, courage, and a grateful heart.
     </p>
 
+    <p>
     For attracting miracles
 Miracles are happening for me right now.
 I am blessed with miracles in many ways.
 The universe orchestrates good things on my behalf.
 I trust that good things are coming to me.
 Every prayer is heard, and every blessing arrives in perfect time.
+    </p>
+
+    <p>
+        How to use these affirmations
+To make your affirmation practice more powerful, keep these tips in mind:
+Say them with conviction: Repeat these affirmations aloud or in your mind with belief and enthusiasm.
+Use the present tense: Phrases like "I am" and "I have" signal to your mind that the desired state is already true.
+Focus on gratitude: By giving thanks for your current and future blessings, you increase what you receive.
+Repeat them often: For the best results, repeat these affirmations daily, such as when you wake up or before you go to sleep.
+    </p>
+
 </body>
 </html>
