add styling to the web page

--- a/color.html
+++ b/color.html
@@ -11,7 +11,7 @@
     <h2>I am growing and trusting the Lord all through 🎺</h2>
 
     <div>
-        <p>Keep going Mark</p>
+       <h2> Keep going Mark</h2>
     </div>
     
     <h4>I love myself</h4>
@@ -55,7 +55,7 @@ I wake each day with hope, courage, and a grateful heart.
     </p>
 
     <p>
-    For attracting miracles
+    <h3>For attracting miracles</h3>
 Miracles are happening for me right now.
 I am blessed with miracles in many ways.
 The universe orchestrates good things on my behalf.
@@ -64,7 +64,7 @@ Every prayer is heard, and every blessing arrives in perfect time.
     </p>
 
     <p>
-        How to use these affirmations
+        <h3>How to use these affirmations</h3>
 To make your affirmation practice more powerful, keep these tips in mind:
 Say them with conviction: Repeat these affirmations aloud or in your mind with belief and enthusiasm.
 Use the present tense: Phrases like "I am" and "I have" signal to your mind that the desired state is already true.
