add more styling to the page and update the readme  file

--- a/color.html
+++ b/color.html
@@ -21,6 +21,8 @@
     <h4>Blessings all around me</h4>
     <h4>Growth is a journey</h4>
 
+    <h6>Life is a journey not a destination 🍬</h6>
+
     <p>
         "I am blessed" affirmations focus on cultivating a deep sense of gratitude for the goodness, love, and abundance in one's life, fostering a mindset of positivity and openness to new blessings. Examples include, "I am a magnet for blessings," "Every day brings new blessings into my life," and "My life is a miracle, filled with grace and abundance"
     </p>
